<resources>
    <string name="default_web_client_id">863883177284-fo7lcn907hhfntd7t31k14o7omhkg93h.apps.googleusercontent.com</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://thehotelmedia.com/.well-known/assetlinks.json\" }]</string>
    <string name="degree_celsius" translatable="false">\u00B0C</string>
    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">हिन्दी</string>
    <string name="marathi" translatable="false">मराठी</string>
    <string name="gujarati" translatable="false">ગુજરાતી</string>
    <string name="telugu" translatable="false">తెలుగు</string>
    <string name="kannada" translatable="false">కన్నడ</string>
    <string-array name="feelings_list">
        <item>😊 Feeling Happy</item>
        <item>😢 Feeling Sad</item>
        <item>😡 Feeling Angry</item>
        <item>😃 Feeling Excited</item>
        <item>😲 Feeling Surprised</item>
        <item>😱 Feeling Scared</item>
        <item>😕 Feeling Confused</item>
        <item>😴 Feeling Tired</item>
        <item>😬 Feeling Nervous</item>
        <item>😐 Feeling Bored</item>
        <item>😟 Feeling Anxious</item>
        <item>😳 Feeling Embarrassed</item>
        <item>🙏 Feeling Grateful</item>
        <item>😌 Feeling Proud</item>
        <item>😞 Feeling Lonely</item>
        <item>🤞 Feeling Hopeful</item>
        <item>❤️ Feeling Love</item>
        <item>😒 Feeling Jealous</item>
        <item>🤔 Feeling Curious</item>
        <item>😔 Feeling Ashamed</item>
        <item>😣 Feeling Guilty</item>
        <item>💪 Feeling Determined</item>
        <item>😌 Feeling Relieved</item>
        <item>😲 Feeling Shocked</item>
        <item>😞 Feeling Disappointed</item>
        <item>😤 Feeling Frustrated</item>
        <item>😯 Feeling Amazed</item>
        <item>😎 Feeling Confident</item>
        <item>😐 Feeling Indifferent</item>
        <item>😂 Feeling Hilarious</item>
        <item>🤣 Feeling Rolling with Laughter</item>
        <item>🥰 Feeling Loved</item>
        <item>🤗 Feeling Caring</item>
        <item>😖 Feeling Miserable</item>
        <item>😩 Feeling Exhausted</item>
        <item>😵 Feeling Overwhelmed</item>
        <item>🥳 Feeling Celebratory</item>
        <item>🤯 Feeling Mind-Blown</item>
        <item>😥 Feeling Worried</item>
        <item>🤤 Feeling Hungry</item>
        <item>🤢 Feeling Disgusted</item>
        <item>🤧 Feeling Sick</item>
        <item>😇 Feeling Blessed</item>
        <item>🥺 Feeling Emotional</item>
        <item>😵‍💫 Feeling Dizzy</item>
    </string-array>
    <string-array name="user_reasons">
        <item>I just don\'t like it</item>
        <item>Bullying or unwanted contact</item>
        <item>Suicide, self-injury or eating disorder</item>
        <item>Violence, hate or exploitation</item>
        <item>Selling or promoting restricted items</item>
        <item>Nudity or sexual activity</item>
        <item>Scam, fraud or spam</item>
        <item>False information</item>
    </string-array>
    <string-array name="post_reasons">
        <item>Inappropriate Content</item>
        <item>Spam</item>
        <item>Hate Speech</item>
        <item>Violence</item>
        <item>Misinformation</item>
        <item>Harassment</item>
        <item>Bullying</item>
        <item>Sexual Content</item>
        <item>Nudity</item>
        <item>Graphic Content</item>
        <item>Self-harm or Suicide</item>
        <item>Promoting Harmful Behavior</item>
        <item>Impersonation</item>
        <item>False Information</item>
        <item>Scam or Fraud</item>
    </string-array>
    <string-array name="comment_reasons">
        <item>Offensive Language</item>
        <item>Spam</item>
        <item>Hate Speech</item>
        <item>Harassment</item>
        <item>Bullying</item>
        <item>Personal Attacks</item>
        <item>False Information</item>
        <item>Misinformation</item>
        <item>Promoting Violence</item>
        <item>Inappropriate Content</item>
        <item>Self-harm or Suicide</item>
        <item>Scam or Fraud</item>
        <item>Irrelevant Content</item>
        <item>Threatening Behavior</item>
        <item>Graphic Content</item>
    </string-array>
    <string name="app_name" translatable="false">THM</string>
    <string name="back">Back</string>
    <string name="views">Views</string>
    <string name="onboard_heading_one">Find the Best\nHotels</string>
    <string name="onboard_heading_two">Rate and Review\nHotels</string>
    <string name="onboard_heading_three">Share Your\nMoments</string>
    <string name="onboard_heading_four">Connect with\nFriends</string>
    <string name="onboard_desc_one">Search and discover top-rated hotels around the world.</string>
    <string name="onboard_desc_two">Share your experiences and help others choose the best hotels.</string>
    <string name="onboard_desc_three">Upload photos and videos of your hotel stays.</string>
    <string name="onboard_desc_four">Follow friends and see their hotel reviews and photos.</string>
    <string name="skip">Skip</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="if_you_don_t_have_account">If you don’t have account</string>
    <string name="sign_up">Sign up</string>
    <string name="select_type">Select Type</string>
    <string name="individual">Individual</string>
    <string name="business">Business</string>
    <string name="individual_sign_up">Individual Sign up</string>
    <string name="name">Name</string>
    <string name="type">type</string>
    <string name="logo">Logo</string>
    <string name="full_name">Full name</string>
    <string name="contact_info">Contact Info</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_from">Upload From</string>
    <string name="select_business_type">Select Business type</string>
    <string name="business_type">Business type</string>
    <string name="select_business">Select Business</string>
    <string name="hotel">Hotel</string>
    <string name="bars_clubs">Bars / Clubs</string>
    <string name="home_stays">Home Stays</string>
    <string name="marriage_banquets">Marriage Banquets</string>
    <string name="restaurant">Restaurant</string>
    <string name="menu">Menu</string>
    <string name="view_menu">View Menu</string>
    <string name="view_your_menu">View your menu</string>
    <string name="edit_your_menu">Edit your menu</string>
    <string name="upload_menu">Upload Menu</string>
    <string name="menu_images_pdf">Menu (Images/PDF)</string>
    <string name="no_menu_available">No menu available</string>
    <string name="menu_uploaded_successfully">Menu uploaded successfully</string>
    <string name="address">Address</string>
    <string name="contact_information">Contact information</string>
    <string name="website_link">Website Link</string>
    <string name="gstn">GSTIN</string>
    <string name="description">Description</string>
    <string name="amenities">Amenities</string>
    <string name="property_pictures">Property Pictures</string>
    <string name="manager_information">Manager Information</string>
    <string name="business_registration">Business Registration</string>
    <string name="gst_pan_documents">(i.e. GST Certificate, Incorporation Certificate, Proprietorship, Business PAN or any relevant document)</string>
    <string name="address_proof">Address Proof</string>
    <string name="address_doc_string">(i.e. Electricity Bill, Rent Agreement, Property Ownership etc.)</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="terms_demo" translatable="false">Hotel Media ("we," "our," "us") respects your privacy and is committed to protecting your personal information. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile application (the "App").Please read this Privacy Policy carefully. If you do not agree with the terms of this Privacy Policy, please do not access the App.</string>
    <string name="select_your_plan">Select Your Plan</string>
    <string name="review_summery">Review Summery</string>
    <string name="billing_address">Billing Address</string>
    <string name="your_plan">Your plan</string>
    <string name="promo_code">Promo Code</string>
    <string name="bill_details">Bill Details</string>
    <string name="name_dots">Name:</string>
    <string name="address_dots">Address:</string>
    <string name="phone_number_dots">Phone number:</string>
    <string name="gstn_dots">GSTIN NUMBER:</string>
    <string name="plan_charges">Plan charges</string>
    <string name="gst">GST</string>
    <string name="total">Total</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_story">Create story</string>
    <string name="review">Review</string>
    <string name="create_post">Create Post</string>
    <string name="hotel_media">Hotel Media</string>
    <string name="post">Post</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="dot">•</string>
    <string name="demo">Hotel Media is a mobile app that combines hotel reviews with social media features. Users can rate hotels, bars, pubs, nightclubs, restaurants, cafes, homestays, and marriage banquets, share feedback, post photos, and engage with other travelers. The app offers hotel search, event creation, and personalized tailored experience. It\'s designed to help users make informed decisions for their trips.</string>
    <string name="edit_profile">Edit profile</string>
    <string name="share_profile">Share profile</string>
    <string name="recent_chat">Recent chat</string>
    <string name="contact_number">Contact Number</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="default_like_count">%1$s likes</string>
    <string name="view_all_comments">View all %1$s comments</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="confirm_your_email">Confirm Your Email</string>
    <string name="code_sent_text">We’ve sent 5 digits verification code to</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="business_related_question">Business Related Question</string>
    <string name="select_answer">Select Answer</string>
    <string name="search">Search</string>
    <string name="looking_for">Looking For</string>
    <string name="mostly_searched">Mostly Searched</string>
    <string name="location">Location</string>
    <string name="joining">Joining ?</string>
    <string name="about_me">About me</string>
    <string name="bio">Bio</string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="visit">Visit</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="add_to_story">Add this to your story</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="camera_title_story">Create story</string>
    <string name="camera_flash_toggle">Toggle flash</string>
    <string name="camera_timer">Timer</string>
    <string name="camera_filter">Filters</string>
    <string name="camera_open_gallery">Open gallery</string>
    <string name="camera_switch">Switch camera</string>
    <string name="camera_hint_photo">Tap to capture a photo</string>
</resources>