<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/report_background"
    app:strokeColor="@color/transparent"
    app:cardCornerRadius="14dp">

    <LinearLayout
        android:layout_width="@dimen/_70sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">



        <TextView
            android:id="@+id/blockBtn"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:fontFamily="@font/comic_regular"
            android:text="@string/block"
            android:background="@drawable/text_popup_background_unselected"/>
        <TextView
            android:id="@+id/reportBtn"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:fontFamily="@font/comic_regular"
            android:text="@string/report"
            android:background="@drawable/text_popup_background_unselected"/>

            <TextView
                android:id="@+id/shareBtn"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:fontFamily="@font/comic_regular"
                android:text="@string/share"
                android:background="@drawable/text_popup_background_unselected"/>

            <TextView
                android:id="@+id/visitBtn"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:fontFamily="@font/comic_regular"
                android:text="@string/visit"
                android:background="@drawable/text_popup_background_unselected"/>



    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
