<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_bottom_sheet_background_small"
        tools:context=".bottomSheets.PostMenuBottomSheetFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <View
                android:layout_gravity="center"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="2dp"
                android:background="@color/blue_50"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/editBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/comic_regular"
                    android:text="@string/edit"
                    android:background="@drawable/text_popup_background_unselected"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/deleteBtn"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/comic_regular"
                    android:text="@string/delete"
                    android:background="@drawable/text_popup_background_unselected"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/reportBtn"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/comic_regular"
                    android:text="@string/report"
                    android:background="@drawable/text_popup_background_unselected"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/addToStoryBtn"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/comic_regular"
                    android:text="@string/add_to_story"
                    android:background="@drawable/text_popup_background_unselected"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</layout>

